infra/k8s/model-zoo-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-zoo-api
spec:
  selector:
    app: model-zoo-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
